fix: adjusted height & width of aside image in mobile view as it was adding a large white space to the side of the mobile view even though aside is hidden

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,6 +138,11 @@ aside {
     height: auto;
 }
 
+#image_aside {
+    height: 0;
+    width: 0;
+}
+
 
 
 /* ------------------------------------ Footer ------------------------------------ */
